2010-11-25  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix spurious failures in `silent*.test' for $CC != gcc
	In some tests on automake-produced silent rules, we forced the
	use of gcc depmode to improve testsuite coverage; but this has
	unsurprisingly led to spurious failures when some non-GNU C
	compilers were used.  So we are now careful to require GCC in
	tests that force gcc depmode.
	From reports by Ralf Wildenhues.
	* silent5.test: Test removed, its content split into ...
	* silent-many-generic.test, silent-many-gcc.test: ... these new
	sister tests, the latter of which forces gcc depmode and lists
	"gcc" in $required.
	* silentlex.test: Test removed, its content split into ...
	* silent-lex-generic.test, silent-lex-gcc.test: ... these new
	sister tests, the latter of which forces gcc depmode and lists
	"gcc" in $required.
	* silentyacc.test: Test removed, its content split into ...
	* silent-yacc-generic.test, silent-yacc-gcc.test: ... these new
	sister tests, the latter of which forces gcc depmode and lists
	"gcc" in $required.
	* tests/Makefile.am (TESTS): Updated.

2010-11-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tests: consistently use "|| Exit 1" after ". ./defs".
	* tests/autohdr.test: Use `. ./defs || Exit 1', not bare
	`. ./defs', for consistency with other tests.
	* tests/autohdr2.test: Likewise.
	* tests/autohdr3.test: Likewise.
	* tests/autohdr4.test: Likewise.
	* tests/cond23.test: Likewise.
	* tests/cond24.test: Likewise.
	* tests/cond25.test: Likewise.
	* tests/cond26.test: Likewise.
	* tests/cond27.test: Likewise.
	* tests/cond28.test: Likewise.
	* tests/cond29.test: Likewise.
	* tests/cond30.test: Likewise.
	* tests/cond31.test: Likewise.
	* tests/cond32.test: Likewise.
	* tests/cond33.test: Likewise.
	* tests/cond34.test: Likewise.
	* tests/cond35.test: Likewise.
	* tests/cond36.test: Likewise.
	* tests/cond37.test: Likewise.
	* tests/cond38.test: Likewise.
	* tests/cond39.test: Likewise.