@@ -8464,10 +8464,6 @@ sub parse_arguments ()
      'c|copy'		=> \$copy_missing,
      'v|verbose'	=> sub { setup_channel 'verb', silent => 0; },
      'W|warnings=s'     => \&parse_warnings,
-     # These long options (--Werror and --Wno-error) for backward
-     # compatibility.  Use -Werror and -Wno-error today.
-     'Werror'           => sub { parse_warnings 'W', 'error'; },
-     'Wno-error'        => sub { parse_warnings 'W', 'no-error'; },
      );
   use Getopt::Long;
   Getopt::Long::config ("bundling", "pass_through");
