@@ -14,7 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# Test to make sure --Werror and --add-missing work together.
+# Test to make sure -Werror and --add-missing work together.
 
 . ./defs || Exit 1
 
@@ -25,4 +25,4 @@ set -e
 rm -f install-sh depcomp missing mkinstalldirs
 
 $ACLOCAL
-$AUTOMAKE --Werror --add-missing
+$AUTOMAKE -Werror --add-missing
