@@ -3,7 +3,8 @@ New in 1.11a:
 * Changes to automake:
 
   - automake now generates silenced rules for texinfo outputs.
-  - The deprecated option `--output-dir' has been removed.
+  - The deprecated options `--output-dir', `--Werror' and `--Wno-error'
+    have been removed.
 
 * New targets:
 
