@@ -1,3 +1,14 @@
+2010-11-26  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Remove long-deprecated options --Werror and --Wno-error.
+	These options has been deprecated at least since commit
+	"Release-1-6-1b-35-gc037f20", dated 2002-07-06.
+	* automake.in (parse_arguments): Do not recognize anymore options
+	`--Werror' and `--Wno-error' as synonyms of respectively `-Werror'
+	and `-Wno-error'.
+	* tests/werror.test: Update: use `-Werror' instead of `--Werror'.
+	* NEWS: Update.
+
 2010-11-25  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	Fix spurious failures in `silent*.test' for $CC != gcc
